<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <GridLayout
        android:id="@+id/grid_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#EFEAE4"
        android:columnCount="4">

        <Button
            android:id="@+id/button_start_fragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_start_fragment" />

        <Button
            android:id="@+id/button_show_custom_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_show_dialog" />

        <Button
            android:id="@+id/button_call_finish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_finish" />

        <Button
            android:id="@+id/button_start_transparent_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_start_transparent_activity" />

        <Button
            android:id="@+id/button_start_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_start_activity" />

        <Button
            android:id="@+id/button_execute_null"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_execute_null" />

        <Button
            android:id="@+id/button_start_infinite_loop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_infinite_loop" />

        <Button
            android:id="@+id/button_start_infinite_fragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_infinite_fragment" />

        <Button
            android:id="@+id/button_start_request_read_contacts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_request_read_contacts" />
    </GridLayout>

    <FrameLayout
        android:id="@+id/frame_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/grid_buttons" />

</RelativeLayout>